Corrections in alignment of Project Factsheet
git-svn-id: file:///svn/trunk@13766 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/odadata/public/stylesheets/factsheets.css
+++ b/odadata/public/stylesheets/factsheets.css
@@ -44,7 +44,8 @@
 
 .factsheet DD {
     border-top:1px solid #999;
-	float:left;
+    float:left;
+    *float:none;
     width:638px;
     margin:0;
     padding:4px 0 4px 0;
